--- a/nutripro/src/components/hero.css
+++ b/nutripro/src/components/hero.css
@@ -1,17 +1,28 @@
+.banner-container {
+    position: relative;
+    display: flex;
+    padding-top: 1.5rem;
+  }
+  
+.home-image-section {
+    margin:0;
+    max-width: 400px;
+    flex: 1;
+  }
 .home-text-section {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin-left: 15px;
+    margin-left: 10px;
   }
   .primary-heading {
-    font-size: clamp(2rem, 5vw, 4rem);
+    font-size: clamp(1rem, 4vw, 3rem);
     /* line-height: 5rem; */
-    max-width: 600px;
+    max-width: 500px;
   }
   .primary-text {
     font-size: clamp(1rem, 3vw, 1.5rem);
-    max-width: 500px;
+    max-width: 400px;
   }
