--- a/nutripro/src/components/nav.css
+++ b/nutripro/src/components/nav.css
@@ -15,3 +15,9 @@
     font-size:25px;
     gap:70px;
 }
+@media (max-width: 1000px) {
+    .nav-menu {
+      margin-right: 1rem;
+      font-size: 1rem;
+    }
+} 
