--- a/nutripro/src/components/hero.css
+++ b/nutripro/src/components/hero.css
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     padding-top: 1.5rem;
+    background-color:#E48F45;
   }
   
 .home-image-section {
@@ -26,4 +27,22 @@
 .primary-text {
     font-size: clamp(1rem, 3vw, 1.5rem);
     max-width: 400px;
+}
+.hero-button {
+  padding: 1rem 2.5rem;
+  background-color: #fe9e0d;
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+  font-weight: 600;
+  color: white;
+  transition: 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero-button:hover {
+  background-color: #e48f0f;
 }
