--- a/nutripro/src/components/footer.css
+++ b/nutripro/src/components/footer.css
@@ -1,6 +1,6 @@
 .main-footer {
     color: white;
-    background-color: #dc3545;
+    background-color: #6B240C;
     padding-top: 3em;
     position: relative;
     bottom: 0;
