--- a/nutripro/src/components/sliding.css
+++ b/nutripro/src/components/sliding.css
@@ -1,4 +1,10 @@
 .slider-container{
-    max-width: 99%;
+    margin-top:0;
+    background-color:white;
+}
+h1{
+    font-size: clamp(1rem, 4vw, 3rem);
+    background-color:inherit;
+    margin-left:10px;
 
 }
