--- a/nutripro/src/App.css
+++ b/nutripro/src/App.css
@@ -6,6 +6,7 @@ body {
   font-family: "Lora", sans-serif;
   margin: 0;
   background-color:#E48F45;
+  overflow-x: hidden;
 }
 .App{
   min-height:100vh;
