--- a/nutripro/src/components/nav.css
+++ b/nutripro/src/components/nav.css
@@ -11,14 +11,20 @@
 }
 .nav-menu{
     display:flex;
-    align-items:center;
+    width: 100%;
     list-style:none;
+    justify-content: flex-end;
+    margin-right:25px;
     font-size:25px;
-    gap:70px;
+    gap:65px;
 }
 @media (max-width: 1000px) {
+    .logo{
+        font-size: 8vw;
+    }
     .nav-menu {
-      margin-right: 1rem;
-      font-size: 1rem;
+      gap:10px;
+      font-size:4vw;
+     
     }
 } 
