--- a/nutripro/src/components/footer.css
+++ b/nutripro/src/components/footer.css
@@ -18,9 +18,12 @@ h2 {
     font-size: clamp(1rem, 3vw, 2rem);
     margin-left: 10px;
 }
-h2 a{
+h2 {
     text-decoration: none;
     color: black;
+}
+h2:hover{
+    cursor:pointer;
 }
 
 .participants {
